Fix CSS bug on firefox.

--- a/ch-energy/app/style.css
+++ b/ch-energy/app/style.css
@@ -2,7 +2,7 @@ html,
 body {
     margin: 0;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 
 body {
@@ -712,9 +712,6 @@ body {
     width: 100% !important;
     height: 100% !important;
     user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
 }
 
 .chart-canvas:focus {
